# eccommerce_basic_surrealdb

./: .env  .gitignore  Cargo.toml  compose.yml
src/: main.rs
src/configuration/: config_env.rs  mod.rs  server_web.rs
src/controllers/: user_controller.rs
src/database/: connection.rs
src/dtos/auth/: create_user.rs
src/handle_error/: error.rs
src/models/: user.rs
src/routes/: user_routes.rs
src/services/: user_service.rs
