[package]
name = "eccommerce_basic_surrealdb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
surrealdb = "2.0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
dotenv = "0.15"
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
log = "0.4.22"
env_logger = "0.11.5"